--- a/config.json
+++ b/config.json
@@ -19,7 +19,8 @@
     "default_day": "Lu/Ma/Mi/Jo/Vi/Sa/Du",
     "default_hour": "10:00-21:00",
     "sport": "Baschet/Fotbal/Popice/Tenis/Tenis cu peretele/Tenis de masa",
-    "location": "Manastur/Gheorgheni"
+    "location": "Manastur/Gheorgheni",
+    "timeout": "10"
   },
 
   "schema": {
@@ -29,6 +30,7 @@
     "default_hour": "str",
     "sport": "str",
     "location": "str",
+    "timeout": "str",
     
     "tokens": ["str?"],
     "whitelist": ["str?"]
