--- a/config.json
+++ b/config.json
@@ -20,21 +20,19 @@
     "location": "Manastur",
     "timeout": "10",
     "tokens": [],
-    "whitelist": []
+    "whitelist": [],
+    "instances": "3"
   },
 
   "schema": {
     "email": "str",
     "password": "str",
-
     "default_day": "list(Lu|Ma|Mi|Jo|Vi|Sâ|Du)",
     "default_hour": "list(10:00|11:00|12:00|13:00|14:00|15:00|16:00|17:00|18:00|19:00|20:00|21:00)",
-
     "sport": "list(Fotbal|Baschet|Tenis|Tenis cu peretele|Pingpong|Volei|Popice|Squash)",
-
     "location": "list(Manastur|Gheorgheni)",
-
     "timeout": "str",
+    "instances": "list(1|2|3|4|5|6|7|8|9|10)",
 
     "tokens": ["str?"],
     "whitelist": ["str?"]
